Update order API, swagger docs and sync services
